--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,56 @@
-.mainTree {
-	padding: 2px;
-	border-radius: 3px;
-	background-color: #ffffff;
-	border: 1px solid #000;
-	width: 150px;
-	font-family: Tahoma;
-	font-size: 12px;
+body {
+	background-color: #101822;
+	font-family: "Lato", sans-serif;
+}
+
+h1 {
+	color: #fff;
+	text-align: center;
+	margin: 60px 0;
 }
 
 #roadmaps {
+	display: flex;
+	justify-content: center;
+	column-gap: 15px;
+}
+
+#roadmaps > button {
+	border-radius: 6px;
+	/* background: linear-gradient(90deg, #4ab2a5 0%, #138cab 100%); */
+	padding: 8px;
+	font-weight: 600;
 	text-align: center;
+	font-size: 16px;
+	color: #fff;
+	cursor: pointer;
+	background-color: #f49830;
+	font-family: "Lato", sans-serif;
+
+	&:focus {
+		background: rgb(2, 0, 36);
+		background: linear-gradient(
+			0deg,
+			rgba(2, 0, 36, 1) 0%,
+			rgba(28, 150, 135, 1) 35%,
+			rgba(0, 212, 255, 1) 100%
+		);
+		color: #101822;
+	}
+}
+
+.mainTree {
+	border-radius: 5px;
+	background-color: #f49830;
+	width: 140px;
+	text-align: center;
+	font-size: 14px;
+	font-weight: 700;
+	padding: 0 2px;
+	border: 2px solid #fff;
+	background: linear-gradient(90deg, #4ab2a5 0%, #138cab 100%);
+}
+
+#skill-tree {
+	margin: 54px 0px;
 }
